매칭방 도메인 로직 리펙토링 및 테스트 코드 작성